<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical"
    android:padding="10pt"
    android:id="@+id/loginLayout">
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/MoLineMerah"
        android:textSize="90px"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="Login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Email"
            android:background="@drawable/border"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="Password"
            android:background="@drawable/border"
            android:layout_margin="5dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:singleLine="true"
            android:password="true"/>
        <CheckBox
            android:id="@+id/RememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="30px"
            android:text="Remember Me"/>

        <Button
            android:id="@+id/btn_login"
            android:onClick="toMarketPage"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="Login"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:textSize="50px"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_margin="10dp"/>
       <!-- <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textColor="@color/MoLineMerah"
            android:textSize="70px"
            android:layout_gravity="center"/>-->
        <!--<Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Continue with google"
            android:textSize="50px"
            android:textAllCaps="false"
            android:backgroundTint="@color/MoLinePutih"
            android:shadowColor="@color/MoLineShadow"
            app:strokeColor="@color/MoLineMerah"
            app:strokeWidth="3px"
            app:cornerRadius="25dp"
            android:layout_gravity="center"/>-->
        <Button
            android:id="@+id/btn_register"
            android:onClick="toRegisterPage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Create Your  Account"
            android:textSize="50px"
            android:textAllCaps="false"
            android:backgroundTint="@color/MoLinePutih"
            android:shadowColor="@color/MoLineShadow"
            app:strokeColor="@color/MoLineMerah"
            app:strokeWidth="3px"
            app:cornerRadius="25dp"
            android:layout_gravity="center"/>
        <Button
            android:onClick="toMusic"
            android:layout_marginTop="100dp"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="Music Room"
            android:textColor="@color/white"
            android:background="@drawable/button"/>


    </LinearLayout>

</LinearLayout>