<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PanggilbensinFragment">
<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apa yang ingin anda jual ?"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <LinearLayout
                android:id="@+id/tambahFoto"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/gambar"
                    android:layout_marginTop="0dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/border"/>

                <Button
                    android:id="@+id/addimage"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Masukkan Foto"/>
            </LinearLayout>
            
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:text="Detail Barang"/>
            <EditText
                android:id="@+id/detailBarang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="Deskripsikan Barang anda">
            </EditText>

            <TextView
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Harga Barang  "/>
            <EditText
                android:id="@+id/hargaBarang"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="cth: 10000"
                android:inputType="number">
            </EditText>

            <Button
                android:id="@+id/btn_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Post"/>
        </LinearLayout>
<!--    </ScrollView>-->
</FrameLayout>