<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.beli"
    android:id="@+id/beliLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10pt"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/MoLineMerah"
        android:textAllCaps="false"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="Barang yang dibeli"/>
    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/MoLineMerah"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_beli"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pic1"/>
        <ImageButton
            android:id="@+id/save_to_internal"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <TextView
            android:id="@+id/keterangan"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_beli"
            android:text="Kunci Kontak Vespaaa Kualitas Terbaik"
            android:textColor="@color/black"
            android:textSize="18dp"/>
        <TextView
            android:id="@+id/Rp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/keterangan"
            android:layout_toRightOf="@+id/img_beli"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="Rp. "/>
        <TextView
            android:id="@+id/harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/Rp"
            android:layout_below="@+id/keterangan"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="85.000"/>

        <LinearLayout
            android:layout_below="@+id/Rp"
            android:layout_toRightOf="@+id/img_beli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
            <ImageButton
                android:onClick="minus"
                android:id="@+id/btn_min"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingBottom="15dp"
                android:src="@drawable/ic_baseline_minimize_24"
                android:background="@drawable/roundborder"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/jumlahbarang"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:text="1"/>
            <ImageButton
                android:onClick="plus"
                android:id="@+id/btn_plus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_baseline_add_24"
                android:background="@drawable/roundborder"
                android:layout_gravity="center"/>
        </LinearLayout>
        <EditText
            android:id="@+id/catatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_beli"
            android:layout_margin="10dp"
            android:hint="Catatan untuk penjual (opsional)"
            android:textSize="13dp"/>
    </RelativeLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/MoLineAbu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="Pengiriman dan Pembayaran\nAlamat"
            android:lineSpacingExtra="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:lineSpacingExtra="10dp"
            android:text="Rumah - Samsudin (08123457891)\nJl. Thamrin No.43E"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:lineSpacingExtra="10dp"
            android:text="Ongkos Kirim\nKurir - Rp. 41.000"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:background="@color/MoLineAbu"
            android:text="Total Bayar\nRp. 12.000"/>
        <Button
            android:id="@+id/btnBayar"
            android:onClick="kehalamanPembayaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:text="Bayar"/>
    </RelativeLayout>
        <Button
            android:id="@+id/setAlarm"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="Reminder"
            android:textColor="@color/white" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>