...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp. "
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85.000"
                    android:textColor="@color/black" />

                <TextView
...
                    android:layout_height="wrap_content"
                    android:text="/pcs"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
        <!--<GridView
            android:id="@+id/myGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="150dp"
            android:horizontalSpacing="15dp"
            android:numColumns="2"
            android:verticalSpacing="15dp" />-->
...
