<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:id="@+id/registerLayout">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10pt">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/MoLineMerah"
        android:textSize="90px"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="Register"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="50px"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/et_firstname_Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10px"
            android:background="@drawable/border"
            android:hint="First Name"
            android:paddingLeft="20dp"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/et_lastname_Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10px"
            android:background="@drawable/border"
            android:hint="Last Name"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_Email_Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10px"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="50px"
            android:hint="Email"
            android:paddingLeft="20dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_Password_Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10px"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="50px"
            android:hint="Password"
            android:paddingLeft="20dp"
            android:password="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/et_confirmPassword_Register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10px"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="50px"
            android:hint="Confirm Password"
            android:paddingLeft="20dp"
            android:password="true"
            android:singleLine="true" />



        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:background="@color/MoLineAbu"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:src="@drawable/pic1" />

            <TextView
                android:id="@+id/tambahFoto"
                android:background="@color/white"
                android:layout_width="119dp"
                android:layout_marginLeft="20dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:padding="0dp"
                android:text="Tambah Foto"
                android:textSize="20dp"

                android:textStyle="bold"

                />
                />
        </LinearLayout>-->

    </LinearLayout>

        <Button
            android:onClick="RegistertoSparepartPage1"
            android:id="@+id/btn_Register"
            android:layout_width="500px"
            android:layout_height="125px"
            android:layout_gravity="center"
            android:layout_marginTop="100px"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="50px"
            android:text="Register"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>